edited to gui-based

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
+
+    <div class="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+
+    <br>
+     
+    <div class="resultText">Please click rock, paper, or scissors.</div>
+    <div class="player">Player Score : <span class="playerTotal"></span></div>
+    <div class="compute">Computer Score : <span class="computerTotal"></span></div>
+
+    <br>
+
+    <button id="reset">reset</button>
     
 </body>
 </html>
